Update linkedin link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </a>
                 </div>
                 <div class="effect linkedin">
-                    <a href="https://www.linkedin.com/photos/afterdesign" target="_blank" data-hover="linkedin">
+                    <a href="https://www.linkedin.com/in/afterdesign" target="_blank" data-hover="linkedin">
                         linkedin
                     </a>
                 </div>
