Remove instagram link cause my profile is not public anymore

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <body>
         <div class="container">
             <div>
-                <div class="effect instagram">
+                <!-- <div class="effect instagram">
                     <a href="https://instagram.com/afterdesign" target="_blank" data-hover="instagram">
                         instagram
                     </a>
-                </div>
+                </div> -->
                 <div class="effect linkedin">
                     <a href="https://www.linkedin.com/in/afterdesign" target="_blank" data-hover="linkedin">
                         linkedin
