Add tookapic, unsplash, 500px links, update instagram link to mieszkam w szczecinie project

--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
     <body>
         <div class="container">
             <div>
-                <!-- <div class="effect instagram">
-                    <a href="https://instagram.com/afterdesign" target="_blank" data-hover="instagram">
+                <div class="effect tookapic">
+                    <a href="https://www.tookapic.com/afterdesign/" target="_blank" data-hover="#365&nbsp;project&nbsp;">
+                        #365 project
+                    </a>
+                </div>
+                <div class="effect instagram">
+                    <a href="https://www.instagram.com/mieszkamwszczecinie/" target="_blank" data-hover="instagram">
                         instagram
                     </a>
-                </div> -->
+                </div>
+                <div class="effect unsplash">
+                    <a href="https://unsplash.com/@afterdesign" target="_blank" data-hover="unsplash">
+                        unsplash
+                    </a>
+                </div>
                 <div class="effect linkedin">
                     <a href="https://www.linkedin.com/in/afterdesign" target="_blank" data-hover="linkedin">
                         linkedin
@@ -48,6 +58,11 @@
                 <div class="effect flickr">
                     <a href="https://www.flickr.com/photos/afterdesign" target="_blank" data-hover="flickr">
                         flickr
+                    </a>
+                </div>
+                <div class="effect px">
+                    <a href="https://500px.com/afterdesign" data-hover="500px">
+                        500px
                     </a>
                 </div>
                 <div class="effect mail">
