Update links to socials

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <body>
         <div class="container">
             <div>
-                <div class="effect tookapic">
-                    <a href="https://www.tookapic.com/afterdesign/" target="_blank" data-hover="#365&nbsp;project&nbsp;">
-                        #365 project
+                <div class="effect instagram">
+                    <a href="https://www.instagram.com/biegamwszczecinie/" target="_blank" data-hover="instagram">
+                        instagram sport project
                     </a>
                 </div>
                 <div class="effect instagram">
                     <a href="https://www.instagram.com/mieszkamwszczecinie/" target="_blank" data-hover="instagram">
-                        instagram
+                        instagram foto project
                     </a>
                 </div>
                 <div class="effect unsplash">
