Update links to socials

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <body>
         <div class="container">
             <div>
-                <div class="effect instagram">
+                <!-- <div class="effect instagram">
                     <a href="https://www.instagram.com/biegamwszczecinie/" target="_blank" data-hover="instagram">
                         instagram sport project
                     </a>
-                </div>
+                </div> -->
                 <div class="effect instagram">
                     <a href="https://www.instagram.com/mieszkamwszczecinie/" target="_blank" data-hover="instagram">
-                        instagram foto project
+                        instagram city project
                     </a>
                 </div>
                 <div class="effect unsplash">
@@ -55,11 +55,11 @@
                         github
                     </a>
                 </div>
-                <div class="effect flickr">
+                <!-- <div class="effect flickr">
                     <a href="https://www.flickr.com/photos/afterdesign" target="_blank" data-hover="flickr">
                         flickr
                     </a>
-                </div>
+                </div> -->
                 <div class="effect px">
                     <a href="https://500px.com/afterdesign" data-hover="500px">
                         500px
