Remove socials I don't use

--- a/index.html
+++ b/index.html
@@ -35,36 +35,31 @@
                         instagram city project
                     </a>
                 </div>
-                <div class="effect unsplash">
+                <!-- <div class="effect unsplash">
                     <a href="https://unsplash.com/@afterdesign" target="_blank" data-hover="unsplash">
                         unsplash
                     </a>
-                </div>
+                </div> -->
                 <div class="effect linkedin">
                     <a href="https://www.linkedin.com/in/afterdesign" target="_blank" data-hover="linkedin">
                         linkedin
                     </a>
                 </div>
-                <div class="effect twitter">
+                <!-- <div class="effect twitter">
                     <a href="https://twitter.com/afterdesign" target="_blank" data-hover="twitter">
                         twitter
                     </a>
-                </div>
+                </div> -->
                 <div class="effect github">
                     <a href="https://github.com/afterdesign" target="_blank" data-hover="github">
                         github
                     </a>
                 </div>
-                <!-- <div class="effect flickr">
-                    <a href="https://www.flickr.com/photos/afterdesign" target="_blank" data-hover="flickr">
-                        flickr
-                    </a>
-                </div> -->
-                <div class="effect px">
+                <!-- <div class="effect px">
                     <a href="https://500px.com/afterdesign" data-hover="500px">
                         500px
                     </a>
-                </div>
+                </div> -->
                 <div class="effect mail">
                     <a href="mailto:rafal+page@malinowski.be" data-hover="mail">
                         mail
